setup html.light.theme selector, so it correctly changes colors of elements to be visible in light mode

--- a/components/_base.css
+++ b/components/_base.css
@@ -28,6 +28,15 @@ html {
   color: var(--text-color);
 }
 
+html.light-theme {
+  background-color: var(--beige);
+  --text-color: var(--black);
+  --gray-light: var(--gray-dark);
+  --light-icon: var(--black);
+  --dark-icon: white;
+  --anchor-color: var(--black);
+}
+
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
